Stop sliding on mobile menu

--- a/css/style.css
+++ b/css/style.css
@@ -621,11 +621,12 @@ section {
   font-family: 'Conv_BebasNeue';
   background: #f9b328;
   display: none;
+/*
 	-webkit-transition: all 0.6s ease-in-out;
   -moz-transition: all 0.6s ease-in-out;
   -o-transition: all 0.6s ease-in-out;
   -ms-transition: all 0.6s ease-in-out;
-  transition: all 0.6s ease-in-out;
+  transition: all 0.6s ease-in-out; */
 }
 .impact_sticky_title .icon {
   width: 50px;
